# YarnMachine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  demo.cpp  install_protobuf.ps1  main.cpp  pb_generate.bat  rng.txt  rngTest.h  test.-Lines.csv  test..yarnc  test3-Lines.csv  test3.yarnc  yarn.cpp  yarn.h  yarn_dialogue_runner.cpp  yarn_dialogue_runner.h  yarn_instructions.cpp  yarn_line_database.cpp  yarn_line_database.h  yarn_markup.cpp  yarn_markup.h  yarn_util.cpp  yarn_util.h  yarn_vm.cpp  yarn_vm.h
YarnTestCases/: Basic-Lines.csv  Basic.yarnc  passing.txt
YarnTestCases/TestCases/: ShortcutOptions.yarn
depends/: CMakeLists.txt
test/: dopts-Lines.csv  dopts-Metadata.csv  dopts.yarn  dopts.yarnc  last-Lines.csv  last.yarn  last.yarnc  passing.txt  regex.txt  repl-Lines.csv  repl-Metadata.csv  repl.yarn  repl.yarnc  savel-Lines.csv  savel-Metadata.csv  savel.yarnc  saveload.yarn  test-Metadata.csv  test.-Lines.csv  test.-Metadata.csv  test..yarnc  test.yarn  test2-Lines.csv  test2-Metadata.csv  test2.yarn  test2.yarnc  test3.yarn  test4-Lines.csv  test4.yarn  test4.yarnc  test5-Lines.csv  test5.yarn  test5.yarnc  test6-Lines.csv  test6.yarn  test6.yarnc  test7-Lines.csv  test7.yarn  test7.yarnc  test8-Lines.csv  (+16 more)
